PortfolioPackage/main/default/objects/About_Me_Record__c/About_Me_Record__c.object-meta.xml
<CustomObject>
    <label>About Me Record</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>About Me Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>About Me Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>