PortfolioPackage/main/default/objects/About_Me_Record__c/fields/About_Me__c.field-meta.xml
<CustomField>
    <fullName>About_Me__c</fullName>
    <label>About Me</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>