PortfolioPackage/main/default/objects/About_Me_Record__c/fields/Relocation__c.field-meta.xml
<CustomField>
    <fullName>Relocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to Relocate</label>
    <type>Checkbox</type>
</CustomField>