PortfolioPackage/main/default/objects/About_Me_Record__c/fields/Remote__c.field-meta.xml
<CustomField>
    <fullName>Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to Work Remote</label>
    <type>Checkbox</type>
</CustomField>