PortfolioPackage/main/default/objects/About_Me_Record__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>About_Me_Records</relationshipName>
    <type>Lookup</type>
</CustomField>