PortfolioPackage/main/default/objects/About_Me_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>About_Me__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Relocation__c</columns>
    <columns>Remote__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>